respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Fee_Line__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si es Verdadero han modificado la Service Line y no lo han vuelto a enviar a SAP</inlineHelpText>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Amount_BI_converted__c</fullName>
        <formula>IF( TEXT(CurrencyIsoCode)=&quot;MXN&quot;,Shipment_Buy_Price__c,Shipment_Buy_Price__c / CURRENCYRATE(&quot;USD&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount BI converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Price_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buy Price Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <formula>Service_Rate_Name__r.Buy_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campo_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para el monitoreo y control de registros bloqueados por parte de SAP</description>
        <label>Campo Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <formula>Service_Rate_Name__r.Carrier_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_trg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FN Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Service Lines</relationshipLabel>
        <relationshipName>Shipment_Service_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_SAP__c</fullName>
        <formula>Service_Rate_Name__r.SAP_Service_Type__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentsServRate__c</fullName>
        <formula>Service_Rate_Name__r.Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_QuoteOrder__c</fullName>
        <formula>Import_Export_Service_Line__r.Service_Rate_Name__r.Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments LineQuoteOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_1_Sell_Price__c</fullName>
        <label>Concept 1 Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concept_1__c</fullName>
        <formula>Service_Rate_Name__r.Concept_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_2_Sell_Price__c</fullName>
        <label>Concept 2 Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concept_2__c</fullName>
        <formula>Service_Rate_Name__r.Concept_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_3_Sell_Price__c</fullName>
        <label>Concept 3 Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concept_3__c</fullName>
        <formula>Service_Rate_Name__r.Concept_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <formula>Service_Rate_Name__r.Container_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Container Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Buy_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Buy Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Modify_Sell_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Modify Sell Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Buy_Price__c</fullName>
        <label>Currency Buy Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                    <default>true</default>
                    <label>MXN</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Campo para consultar el Customer Id del objeto Account (Customer)</description>
        <formula>Shipment__r.Account_for__r.Customer_Id__c</formula>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Email__c</fullName>
        <label>Director_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Discount_Charge__c</fullName>
        <label>Discount Charge</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_1__c</fullName>
        <label>Email Cobranza 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_2__c</fullName>
        <label>Email Cobranza 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_3__c</fullName>
        <label>Email Cobranza 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sales_ExecutiveSP__c</fullName>
        <label>Email Sales ExecutiveSP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Executive_del_SP__c</fullName>
        <formula>Import_Export_Quote__r.CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Sales Executive del SP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_de_IEQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es de IEQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explain_New_Service_Line__c</fullName>
        <formula>IF( New_Service_Line__c = True, &quot;Se ha creado una nueva Service line  NOW() y no esta relacionada a la Import Export Quote de Origen: Import_Export_Quote__r.Name &quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Explain New Service Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Service_Name__c</fullName>
        <label>Extension Service Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT(Service_Rate_Name__r.Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_info__c</fullName>
        <formula>Service_Rate_Name__r.CustomRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Export_Mode__c</fullName>
        <formula>Import_Export_Quote__r.Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import-Export Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote/Order</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Shipment Service Lines</relationshipLabel>
        <relationshipName>Shipment_Fee_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Export_Service_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Service Line</label>
        <referenceTo>Import_Export_Fee_Line__c</referenceTo>
        <relationshipLabel>Shipment Service Lines</relationshipLabel>
        <relationshipName>Shipment_Service_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Outstanding_Balance__c</fullName>
        <formula>Sell_Amount__c - Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Total Amount Invoiced</label>
        <summarizedField>Invoice_Service_Line__c.Amount_Allocated_Service_Line_Currency__c</summarizedField>
        <summaryForeignKey>Invoice_Service_Line__c.Shipment_Service_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margen__c</fullName>
        <formula>Std_Buy_Amount_SUM_Shipment_Disbur__c / Sell_Gross_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Amount__c</fullName>
        <label>Min Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <formula>text (Service_Rate_Name__r.Moneda__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moneda</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negociacion__c</fullName>
        <formula>text(Service_Rate_Name__r.Negociacion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negociacion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Service_Line__c</fullName>
        <formula>IF( Name  &lt;&gt;   Import_Export_Service_Line__r.Name ,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Service Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Shipment_Name__c</fullName>
        <description>BI</description>
        <formula>Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Shipment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Executive_SP__c</fullName>
        <formula>Shipment__r.Operation_Executive__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Executive SP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Executive__c</fullName>
        <label>Operations Executive</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Orden_Compra__c</fullName>
        <description>orden de compra dada por sap</description>
        <label>Orden de Compra</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Std_Buy_Amount__c - Total_Amount_Allocated_On_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursement Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Category_info__c</fullName>
        <formula>Service_Rate_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Name_BI__c</fullName>
        <description>Para consumo de BI</description>
        <formula>Service_Rate_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Name BI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>TEXT(Service_Rate_Name__r.Rate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si el registro esta bloqueado temporalmente</description>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SST_Estatus_orden_compra__c</fullName>
        <label>Estatus de orden de compra</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SST_Orden_compra__c</fullName>
        <label>Orden de compra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SST_Sociedad__c</fullName>
        <description>Campo que consulta el valor de Sociedad en el Service Rate</description>
        <formula>Service_Rate_Name__r.SST_Sociedad__c</formula>
        <label>Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUM_Cost_Allocated__c</fullName>
        <label>SUM Cost Allocated</label>
        <summarizedField>Ship_Service_Consol__c.Cost_Allocated__c</summarizedField>
        <summaryForeignKey>Ship_Service_Consol__c.Shipment_Service_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saldo_Disponible_Cliente__c</fullName>
        <formula>Shipment__r.Account_for__r.Saldo_DisponibleOK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Disponible (Cliente)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sap_Comp_Code__c</fullName>
        <formula>Service_Rate_Name__r.Sap_Comp_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sap Comp Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sap_Service_Type_Buy__c</fullName>
        <formula>Service_Rate_Name__r.SAP_Service_Type_Buy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sap Service Type Buy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sap_Service_Type__c</fullName>
        <formula>Service_Rate_Name__r.SAP_Service_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sap Service Type Sell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_BI_Converted__c</fullName>
        <formula>IF( TEXT(CurrencyIsoCode)=&quot;MXN&quot;,Sell_Amount__c,Sell_Amount__c / CURRENCYRATE(&quot;USD&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Amount BI Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_Number__c</fullName>
        <formula>Sell_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Amount Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <formula>Sell_Gross_Amount__c * (1 - Discount_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_header_currency__c</fullName>
        <formula>Sell_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Net Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Gross_Amount__c</fullName>
        <formula>IF(Shipment_Sell_Price__c &gt;= 0, MAX(Min_Amount__c,Shipment_Sell_Price__c * Units__c), Shipment_Sell_Price__c * Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Price_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sell Price Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sell_Rate__c</fullName>
        <formula>Service_Rate_Name__r.Fee_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Category_Filter__c</fullName>
        <label>Rate Category Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Category__c</fullName>
        <formula>TEXT(Service_Rate_Name__r.Fee_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Name</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Shipment Service Lines</relationshipLabel>
        <relationshipName>Shipment_Service_Lines_Service_Rate_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Rate__c</fullName>
        <formula>Service_Rate_Name__r.Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Service Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Real_Profit__c</fullName>
        <formula>Sell_Amount__c - Total_Amount_Allocated_On_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Disb. Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Std_Profit__c</fullName>
        <formula>Sell_Amount__c - Std_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Buy_Price_Number__c</fullName>
        <label>Shipment Buy Price Number</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Buy_Price__c</fullName>
        <label>Shipment Buy Price</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Mode__c</fullName>
        <formula>Shipment__r.Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Sell_Net_Price__c</fullName>
        <formula>Shipment_Sell_Price__c * (1- Discount_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Sell Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Sell_Price__c</fullName>
        <label>Shipment Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Service_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Shipment Service Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Shipment__c</field>
                <operation>equals</operation>
                <valueField>Shipment_Fee_Line__c.Shipment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Fee_Line__c</referenceTo>
        <relationshipLabel>Shipment Service Lines</relationshipLabel>
        <relationshipName>Shipment_Service_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Planner__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status_Plann__c)</formula>
        <label>Shipment Status Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_SAP__c</fullName>
        <formula>TEXT(Shipment__r.Status_Shipment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Shipment_name_BI__c</fullName>
        <description>Para consumo de BI</description>
        <formula>Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment name BI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipments_Program_Rate_Category__c</fullName>
        <label>Shipments Program Rate Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rate_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount_Number__c</fullName>
        <formula>Std_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Std Buy Amount Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount_SUM_Shipment_Disbur__c</fullName>
        <formula>Std_Buy_Amount__c -  Total_Amount_Allocated_On_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount - SUM Shipment Disbur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount__c</fullName>
        <formula>IF(Shipment_Buy_Price__c &gt;= 0 ,MAX (Shipment_Buy_Price__c * Units__c, IF((ISNULL(Shipment_Buy_Price__c )== true) || (Shipment_Buy_Price__c = 0), 0, Min_Amount__c ) ), MIN (Shipment_Buy_Price__c * Units__c, IF((ISNULL(Shipment_Buy_Price__c )== true) || (Shipment_Buy_Price__c = 0), 0, - Min_Amount__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount_header_currency__c</fullName>
        <formula>Std_Buy_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tarifa_Negociada__c</fullName>
        <formula>text( Service_Rate_Name__r.Tarifa_objetivo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tarifa Negociada</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarifario_Info__c</fullName>
        <formula>Service_Rate_Name__r.CustomRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tarifario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Allocated_On_Disbursements__c</fullName>
        <label>Total Amount Allocated On Disbursements</label>
        <summarizedField>Shipment_Service_Line_Disbursement__c.Amount_Allocated_Service_Line_Currency__c</summarizedField>
        <summaryForeignKey>Shipment_Service_Line_Disbursement__c.Shipment_Service_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Disbursements_Hea_Currency__c</fullName>
        <formula>Total_Amount_Allocated_On_Disbursements__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Disbursements(Hea Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Invoiced_header_currency__c</fullName>
        <formula>Invoiced_Amount__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Invoiced (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilidad__c</fullName>
        <formula>Sell_Gross_Amount__c -  Std_Buy_Amount_SUM_Shipment_Disbur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venta_Account__c</fullName>
        <formula>TEXT(Shipment__r.Account_for__r.Venta_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venta Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warehouse Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workplace_Acc_Owner__c</fullName>
        <formula>Import_Export_Quote__r.Account_for__r.Workplace_AccOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplace Acc Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clasificacion_ruta__c</fullName>
        <formula>text( Service_Rate_Name__r.Clasificacion_ruta__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>clasificacion ruta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_service_types_info__c</fullName>
        <formula>Service_Rate_Name__r.SAP_Service_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sap service type</label>
        <type>Text</type>
    </fields>
    <label>Shipment Service Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Block_Shipment_Service_Line</fullName>
        <active>true</active>
        <description>Bloqueo de edicion cuando campo control esta activo</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
Campo_Control__c,
NOT(CONTAINS($Profile.Name,&quot;Admin&quot;))
)</errorConditionFormula>
        <errorMessage>No es posible modificar debido a que cuenta con una Orden de Entrega.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LimiteCreditoNoDisponible</fullName>
        <active>false</active>
        <description>Regla que detecta cuando el total de servicios vendidos supera al saldo disponible del cliente</description>
        <errorConditionFormula>AND(
ISCHANGED(Shipment_Sell_Price__c),
Shipment__r.Account_for__r.Saldo_DisponibleOK__c &lt;  Shipment_Sell_Price__c,
 Shipment__r.Acc_venta__c = &apos;Credito&apos;
)</errorConditionFormula>
        <errorDisplayField>Shipment_Sell_Price__c</errorDisplayField>
        <errorMessage>Crédito del cliente insuficiente. Hablar con el departamento de créditos*</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LineaVenta_SinCarrier</fullName>
        <active>false</active>
        <description>Regla que detecta cuando se intenta cargar una Shipment Service Line que aún no tiene asignado el carrier en el Rate Name.</description>
        <errorConditionFormula>ISBLANK( Service_Rate_Name__r.Carrier_Account__c )</errorConditionFormula>
        <errorMessage>No se puede cargar una línea de venta si aún no tiene asignado el Carrier*</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoModificarPreciosVentaCompra</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

   Shipment__r.Estatus_Cerrado__c = true,

   OR(
      ISPICKVAL(  Shipment__r.Shipment_Status_Plann__c   , &apos;Closed&apos;),
      ISPICKVAL( Shipment__r.Shipment_Status_Mon__c  , &apos;Closed&apos;),
      ISPICKVAL( Shipment__r.Air_Shipment_Status__c , &apos;Closed&apos;),
      ISPICKVAL( Shipment__r.Shipment_Status__c, &apos;Closed&apos;),
      ISPICKVAL( Shipment__r.Ocean_Shipment_Status__c , &apos;Closed&apos;)),

    OR(
        AND(
            ISCHANGED(Shipment_Buy_Price__c),
            PRIORVALUE(Shipment_Buy_Price__c) &lt;&gt; 0
        ),

        Shipment_Sell_Price__c &lt;&gt; PRIORVALUE(Shipment_Sell_Price__c)
    )

)</errorConditionFormula>
        <errorMessage>No se puede modificar el Precio de venta / Costo si el Shipment esta en estatus &quot;Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoModificarShipmentSellPrice</fullName>
        <active>true</active>
        <description>No modificar el campo &apos;Shipment Sell Price&apos; si el usuario tiene el perfil de PAK2GO Operaciones</description>
        <errorConditionFormula>AND(
ISCHANGED( Shipment_Sell_Price__c ),
$Profile.Id = &apos;00e4T000000lL6S&apos;,
$User.Contado_Mgm__c = False
)</errorConditionFormula>
        <errorDisplayField>Shipment_Sell_Price__c</errorDisplayField>
        <errorMessage>SSP-001: Usuario no permitido para modificar este campo. Solicitar la modificación del precio a comercial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_se_acepta_1peso_SP</fullName>
        <active>true</active>
        <errorConditionFormula>Shipment_Buy_Price__c = 1</errorConditionFormula>
        <errorMessage>No se puede colocar el valor de $1 en este campo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nueva_ServiceStatus_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Shipment__r.Estatus_Cerrado__c = true,
OR(
ISPICKVAL( Shipment__r.Shipment_Status_Plann__c , &apos;Closed&apos;),
ISPICKVAL( Shipment__r.Air_Shipment_Status__c , &apos;Closed&apos;),
ISPICKVAL( Shipment__r.Shipment_Status__c, &apos;Closed&apos;),
ISPICKVAL( Shipment__r.Ocean_Shipment_Status__c , &apos;Closed&apos;)
),
isnew()
)</errorConditionFormula>
        <errorMessage>No se pueden crear Service Lines si el Shipment esta en estatus &quot;Closed&quot;</errorMessage>
    </validationRules>
</CustomObject>